crates/cyrs-plan/src/snapshots/cyrs_plan__lower__tests__plan_optional_match.snap
---
source: crates/cyrs-plan/src/lower.rs
expression: render(&plan)
---
read_ops: 5
write_ops: 0
var_map_entries: 2
op[0]: Source(label=None, bind=0)
op[1]: Source(label=None, bind=0)
op[2]: Expand(from=0, bind_rel=2, bind_to=1)
op[3]: OptionalJoin(input=0)
op[4]: Project(input=3, cols=2)
