crates/cyrs-plan/src/snapshots/cyrs_plan__lower__tests__plan_order_skip_limit.snap
---
source: crates/cyrs-plan/src/lower.rs
expression: render(&plan)
---
read_ops: 5
write_ops: 0
var_map_entries: 1
op[0]: Source(label=None, bind=0)
op[1]: Project(input=0, cols=1)
op[2]: OrderBy(input=1, keys=1)
op[3]: Skip(input=2)
op[4]: Limit(input=3)
