crates/cyrs-plan/src/snapshots/cyrs_plan__lower__tests__plan_return_distinct.snap
---
source: crates/cyrs-plan/src/lower.rs
expression: render(&plan)
---
read_ops: 3
write_ops: 0
var_map_entries: 1
op[0]: Source(label=None, bind=0)
op[1]: Project(input=0, cols=1)
op[2]: Distinct(input=1)
