crates/cyrs-plan/src/snapshots/cyrs_plan__lower__tests__plan_set_property.snap
---
source: crates/cyrs-plan/src/lower.rs
expression: render(&plan)
---
read_ops: 1
write_ops: 1
var_map_entries: 1
op[0]: Source(label=["Person"], bind=0)
write[0]: SetProperty(target=1, prop=age)
